--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "prisma": "^5.3.1",
     "react": "^18",
     "react-dom": "^18"
