--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "next": "13.5.4",
     "next-auth": "^4.23.2",
     "prisma": "^5.3.1",
