--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prisma": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zod": "^3.22.3"
   },
   "devDependencies": {
     "@types/node": "^20",
