env: add nexauth_url & github oauth

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # Database URL
 DATABASE_URL=postgresql://username:password@localhost:5432/qanst
 
-# NextAuth Configuration - Google OAuth
-NEXT_AUTH_CLIENT_ID=your_google_OAuth_client_id
-NEXT_AUTH_CLIENT_SECRET=your_google_OAuth_client_secret
+# NextAuth Configuration - Github OAuth
+NEXT_AUTH_CLIENT_ID=your_github_OAuth_client_id
+NEXT_AUTH_CLIENT_SECRET=your_github_OAuth_client_secret
 
-# NextAuth Secret
+# NextAuth URL & Secret
+NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=nextauth_secret  # any random key would work
 
 # Base URL
