--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "npx prisma generate && npx prisma migrate dev --name init && next start",
     "lint": "next lint"
   },
   "dependencies": {
